Fixed modal z-index to be on top of flyout

--- a/src/FinanMan/FinanMan.BlazorUi/Sass/_Root.scss
+++ b/src/FinanMan/FinanMan.BlazorUi/Sass/_Root.scss
@@ -42,4 +42,7 @@
     --font-size-h2: 1.5em;
     --font-size-h3: 1.17em;
     --font-size-h4: 1em;
+    /* Default z-index */
+    --flyout-z-index: 2;
+    --modal-z-index: calc(var(--flyout-z-index) + 1);
 }
